<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firebaseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6BEE6"
    tools:context=".FirebaseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="147dp"
            android:layout_marginBottom="40dp"
            android:text="@string/download"
            app:layout_constraintBottom_toTopOf="@+id/questionTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="268dp"
            android:layout_height="152dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="8dp"
            android:text="@string/question_list"
            app:layout_constraintBottom_toTopOf="@+id/downloadButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="79dp"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/questionTextInputLayout"
            android:layout_width="275dp"
            android:layout_height="158dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="66dp"
            app:layout_constraintBottom_toTopOf="@+id/uploadButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downloadButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/questionTextInput"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:hint="@string/question_input"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/outputTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="38dp"
            android:text="@string/textview"
            android:textColor="#8E24AA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>