<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameEntry_P1">

    <View
        android:id="@+id/answer_view_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/default_background_style"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/spooner_1_string"
        android:textColor="@color/spooner_color"
        android:textSize="49sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/textView_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/baloo"
        android:text="@string/name_string"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_p1" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="185dp"
        android:layout_height="135dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cloud_next_button"
        android:fontFamily="@font/baloo"
        android:onClick="next"
        android:text="@string/next_string"
        android:textColor="@color/name_color"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input_p1"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/name_input_p1"
        android:layout_width="223dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:autofillHints="name"
        android:background="@drawable/name_entry_style"
        android:ems="20"
        android:gravity="center"
        android:hint="@string/_eg__bill_underline"
        android:inputType="textPersonName"
        android:shadowRadius="0"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Name" />


</androidx.constraintlayout.widget.ConstraintLayout>

