<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhichAnswer">

    <View
        android:id="@+id/view_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/default_background_style"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_which_did"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:fontFamily="@font/baloo"
        android:text="@string/which_did_string"
        android:textColor="@color/spooner_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/txtFollow_LeadName"
        android:layout_width="413dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/baloo"
        android:text="P1"
        android:textAlignment="center"
        android:textColor="@color/p1_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_which_did" />

    <TextView
        android:id="@+id/txt_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="420dp"
        android:fontFamily="@font/baloo"
        android:text="@string/choose_string"
        android:textColor="@color/spooner_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFollow_LeadName"
        app:layout_constraintVertical_bias="0.0" />



    <ImageView
        android:id="@+id/imageView_cloud5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_cloud6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_back_5" />

    <ImageView
        android:id="@+id/imageView_cloud6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="272dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_back_6" />

    <ImageView
        android:id="@+id/imageView_cloud7"
        android:layout_width="284dp"
        android:layout_height="186dp"
        android:layout_marginTop="440dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_cloud8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_back_7" />

    <ImageView
        android:id="@+id/imageView_cloud8"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="440dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_back_8" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/wrong_string"
        android:textColor="@color/wrong_answer"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="170dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/exit_button"
        android:fontFamily="@font/baloo"
        android:text="@string/exit_string"
        android:textColor="@color/spooner_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_again_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/play_again_button"
        android:layout_width="237dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/play_again_button"
        android:fontFamily="@font/baloo"
        android:text="@string/play_again_string"
        android:textColor="@color/name_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>