<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhichAnswer">

    <View
        android:id="@+id/answer_view_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/default_background_style"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_which_did"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:fontFamily="@font/baloo"
        android:text="@string/which_did_string"
        android:textColor="@color/spooner_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/txtFollow_LeadName"
        android:layout_width="413dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/baloo"
        android:text="P1"
        android:textAlignment="center"
        android:textColor="@color/p1_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_which_did" />

    <TextView
        android:id="@+id/txt_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="420dp"
        android:fontFamily="@font/baloo"
        android:text="@string/choose_string"
        android:textColor="@color/spooner_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFollow_LeadName"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView_cloud1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_cloud2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_back_1" />

    <ImageView
        android:id="@+id/imageView_cloud2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="264dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_back_2" />

    <ImageView
        android:id="@+id/imageView_cloud3"
        android:layout_width="262dp"
        android:layout_height="212dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_cloud4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_back_3" />

    <ImageView
        android:id="@+id/imageView_cloud4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:layout_marginTop="412dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_back_4" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/correct_string"
        android:textColor="@color/p1_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/answer_view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="170dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/exit_button"
        android:fontFamily="@font/baloo"
        android:text="@string/exit_string"
        android:textColor="@color/spooner_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_again_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/play_again_button"
        android:layout_width="237dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/play_again_button"
        android:fontFamily="@font/baloo"
        android:text="@string/play_again_string"
        android:textColor="@color/name_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>